add new missing cd4 report and partially completed changes to the PMTCT reports